--- a/Licensing.Deviar/appsettings.json
+++ b/Licensing.Deviar/appsettings.json
@@ -4,7 +4,7 @@
   },
   "Admin": {
     "Email": "contact@deviar.net",
-    "Password": "Picturesque1@" 
+    "Password": "Picturesque1@"
   },
   "Logging": {
     "LogLevel": {
@@ -12,6 +12,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "InstagramBotId": 2, 
+  "Sendgrid": "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",
+  "InstagramBotId": 2,
   "AllowedHosts": "*"
 }
