--- a/Licensing.Deviar/ClientApp/angular.json
+++ b/Licensing.Deviar/ClientApp/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/licensing",
+            "outputPath": "../bin/Release/net7.0/publish/wwwroot/dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
