--- a/Licensing.Deviar/Licensing.Deviar.csproj
+++ b/Licensing.Deviar/Licensing.Deviar.csproj
@@ -1,11 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Licensing.Deviar-ACF492D8-8A8E-4A7A-A4AE-194EEB17961A</UserSecretsId>
   </PropertyGroup>
+
+  <Target Name="NgBuild" BeforeTargets="ComputeFilesToPublish">
+    <Exec WorkingDirectory="$(ProjectDir)ClientApp" Command="ng build"></Exec>
+  </Target>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
