--- a/Licensing.Deviar/appsettings.json
+++ b/Licensing.Deviar/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\sqlexpress;Initial Catalog=licensing;Trusted_Connection=Yes;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=tcp:deviarsql.database.windows.net,1433;Initial Catalog=deviar;Persist Security Info=False;User ID=deviar;Password=nvbi7@3GpZRhvRP;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    },
   "Admin": {
     "Email": "contact@deviar.net",
     "Password": "Picturesque1@"
